Modulo 3/Entregables/lab2/app-b.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-b
spec:
  containers:
  - name: app-b-container
    image: nginx
